# Flask_example

./: README.md
001_model/: model.pkl  pyproject.toml  requirements-2.txt  requirements.txt
002_flaskapp/: requirements.txt  run2.py
002_flaskapp/templates/: index.html
